Deployment.yaml
apiVersion: apps/v1



kind: Deployment



metadata:



  name: myapp



spec:



  selector:



    matchLabels:



      run: myapp



  replicas: 1



  template:



    metadata:



      labels:



        run: myapp



    spec:



      containers:



      - name: myapp



        image: surendra143245/myapp



        ports:



        - containerPort: 5000
