Service.yaml
apiVersion: v1

kind: Service

metadata:

  name: myapp

  labels:

    run: myapp

spec:

  type: NodePort

  ports:

  - port: 5000

    targetPort: 80

    protocol: TCP

    name: http

 

  selector:

    run: myapp
