Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mying-rule
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: myapp
              port:
                number: 80
